--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Abbas Allahyari",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
